--- a/resources/style2.css
+++ b/resources/style2.css
@@ -42,22 +42,24 @@ span {
 	margin: 0 auto;
 }
 .fixedlogo{
-	display: flex;
+
 	width: 100%;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
+	height: 67.5%;
 	position: fixed;
+	
+
+}
+.fixedlogo img{
+	margin: 0 auto;
 
 }
 .logo_2{
-	/* display: flex; */
-
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	margin: 0 auto!important;
 	height: 24em;
-	/* position: fixed; */ */ */ */
-	top: 35%; */
-	left: 41.75%; */ */
-	margin: auto;
+
 }
 .logo_small{
 	position: fixed;
@@ -132,7 +134,6 @@ h2{
 	padding: 1rem;
 }
 .home_link a{
-	padding: rem;
 	font-size: 2rem;
 }
 /* h3{
@@ -147,6 +148,7 @@ h2{
 .navbar, nav{
 	z-index: 0;
 }
+
 nav ul{
 	margin: 0 auto;
 }
