--- a/resources/style2.css
+++ b/resources/style2.css
@@ -11,6 +11,14 @@ body {
 	overflow-x: hidden;
 	font-size: 10px;
 }
+@font-face {
+    font-family: 'windsorregular';
+    src: url('windsor_regular-webfont.woff2') format('woff2'),
+         url('windsor_regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 header {
   width: 100%;
@@ -46,7 +54,7 @@ span {
 	width: 100%;
 	height: 67.5%;
 	position: fixed;
-	
+
 
 }
 .fixedlogo img{
@@ -103,7 +111,7 @@ span {
 
 body{
 	font-size: 10px;
-	font-family: "Windsor";
+	font-family: "windsorregular";
 	background-color: #3290A3;
 	position: relative;
 
@@ -222,7 +230,7 @@ nav a:hover{
 
 
 .parallax{
-	background-image: url('https://geofferdean.github.io/cassady hero real.png');
+	background-image: url('../cassady-hero-real.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: top;
@@ -430,7 +438,7 @@ font-size: 2.4rem;
 	text-align: left;
 	width: 100%;
 	font-size: 2.4rem;
-	font-family: "windsor";
+	font-family: "windsorregular";
 	font-weight: 400;
 
 	/* margin-bottom: 2rem; */
@@ -578,7 +586,7 @@ object:hover{
 	padding: 0;
 	font-size: 2rem;
 	text-align: center;
-	font-family: "windsor";
+	font-family: "windsorregular";
 }
 
 /* carousel stuff */
