--- a/resources/style2.css
+++ b/resources/style2.css
@@ -13,8 +13,8 @@ body {
 }
 @font-face {
     font-family: 'windsorregular';
-    src: url('windsor_regular-webfont.woff2') format('woff2'),
-         url('windsor_regular-webfont.woff') format('woff');
+    src: url('https://geofferdean.github.io/windsor_regular-webfont.woff2') format('woff2'),
+         url('https://geofferdean.github.io/windsor_regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
